--- a/Labs/Lecture20_Sound_Packaging/pyinstaller_settings.toml
+++ b/Labs/Lecture20_Sound_Packaging/pyinstaller_settings.toml
@@ -1,13 +1,16 @@
 # pyinstaller 로 exe 를 build 하기 위한 설정
 
 # 1. 메인 파일 이름을 지정하세요.
-main_file = ''
+main_file = 'main.py'
 
 # 2. 데이타 파일들을 지정하세요.
 data_files = [
+    'football.mp3', 'zombie_pickup.wav', 'pickup.wav',
+    'animation_sheet.png', 'ball21x21.png', 'TUK_GROUND_FULL.png', 'ENCR10B.TTF'
 ]
 
 # 3. 데이타가 들어있는 폴더들을 지정하세요.
 data_folders = [
+    'zombie'
 ]
 
